; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-lang.c_dynamic_template_type.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-lang.c_dynamic_template_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.type = type { i32 }

@TYPE_CODE_STRUCT = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [7 x i8] c"___XVE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.type* (%struct.type*)* @dynamic_template_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.type* @dynamic_template_type(%struct.type* %0) #0 {
  %2 = alloca %struct.type*, align 8
  %3 = alloca %struct.type*, align 8
  %4 = alloca i32, align 4
  store %struct.type* %0, %struct.type** %3, align 8
  %5 = load %struct.type*, %struct.type** %3, align 8
  %6 = call i32 @CHECK_TYPEDEF(%struct.type* %5)
  %7 = load %struct.type*, %struct.type** %3, align 8
  %8 = icmp eq %struct.type* %7, null
  br i1 %8, label %18, label %9

9:                                                ; preds = %1
  %10 = load %struct.type*, %struct.type** %3, align 8
  %11 = call i64 @TYPE_CODE(%struct.type* %10)
  %12 = load i64, i64* @TYPE_CODE_STRUCT, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %18, label %14

14:                                               ; preds = %9
  %15 = load %struct.type*, %struct.type** %3, align 8
  %16 = call i32* @ada_type_name(%struct.type* %15)
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %14, %9, %1
  store %struct.type* null, %struct.type** %2, align 8
  br label %39

19:                                               ; preds = %14
  %20 = load %struct.type*, %struct.type** %3, align 8
  %21 = call i32* @ada_type_name(%struct.type* %20)
  %22 = call i32 @strlen(i32* %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = icmp sgt i32 %23, 6
  br i1 %24, label %25, label %36

25:                                               ; preds = %19
  %26 = load %struct.type*, %struct.type** %3, align 8
  %27 = call i32* @ada_type_name(%struct.type* %26)
  %28 = load i32, i32* %4, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32, i32* %27, i64 %29
  %31 = getelementptr inbounds i32, i32* %30, i64 -6
  %32 = call i64 @DEPRECATED_STREQ(i32* %31, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %25
  %35 = load %struct.type*, %struct.type** %3, align 8
  store %struct.type* %35, %struct.type** %2, align 8
  br label %39

36:                                               ; preds = %25, %19
  %37 = load %struct.type*, %struct.type** %3, align 8
  %38 = call %struct.type* @ada_find_parallel_type(%struct.type* %37, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store %struct.type* %38, %struct.type** %2, align 8
  br label %39

39:                                               ; preds = %36, %34, %18
  %40 = load %struct.type*, %struct.type** %2, align 8
  ret %struct.type* %40
}

declare dso_local i32 @CHECK_TYPEDEF(%struct.type*) #1

declare dso_local i64 @TYPE_CODE(%struct.type*) #1

declare dso_local i32* @ada_type_name(%struct.type*) #1

declare dso_local i32 @strlen(i32*) #1

declare dso_local i64 @DEPRECATED_STREQ(i32*, i8*) #1

declare dso_local %struct.type* @ada_find_parallel_type(%struct.type*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
